--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,6 +7,7 @@ message.regSucc=You registered successfully. We will send you a confirmation mes
 message.Error= Error
 message.regEmailError=An account for that email already exists. Please enter a different email.
 message.regUserError=An account for that username already exists. Please enter a different username.
+message.resNbrGuestError= Accommodation guest number to high
 label.form.CheckIn= CheckIn
 label.form.CheckOut= CheckOut
 label.form.Filter= Filter
@@ -39,6 +40,7 @@ message.Error404=Error 404
 label.pages.myHouses=My Logements
 label.title.Logement=Housing
 label.form.AddHousing=Add new house
+label.form.EditHousing=Edit House
 label.form.validations=Validations
 label.form.logement.Reference=Reference
 label.form.logement.Localisation=Localisation
@@ -50,3 +52,29 @@ label.form.logement.Size=Size
 label.form.Miles=Miles
 label.Max=Max
 label.form.Reserve=Reserve
+label.form.Year=Year
+label.form.Date=Date
+label.form.Desc=Description
+label.form.logement.Type=House type
+label.form.logement.Type.flat=Flat
+label.form.logement.Type.hut=Hut
+label.form.logement.Type.bungalow=Bungalow
+label.form.logement.Type.houseBarn=HouseBarn
+label.form.choose.img=Choose image
+label.form.DatedDispo=Disponibility Date
+label.form.update=Update
+label.form.Add=Add
+label.form.Edit=Edit
+label.form.Delete=Delete
+label.form.Enable=Enable
+label.form.Disable=Disable
+label.form.Owner=Owner
+label.form.Cancel=Cancel
+label.form.AddReservation=New Reservation
+label.form.EditReservation=Edit Reservation
+label.form.End=End
+label.form.Start=Start
+label.form.Night=Night
+label.form.Status=Status
+label.form.Waiting=Waiting
+label.form.Valid=Valid
