fin du tp progComp - améliorations possible

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,7 +3,7 @@ message.password=Password required
 message.badCredentials=Invalid Credentials
 message.regPasswordError= Passwords don't match
 message.logoutSucc=You logged out successfully
-message.regSucc=You registered successfully. We will send you a confirmation message to your email account.
+message.regSucc=You registered successfully. you can now connect with your credentials.
 message.Error= Error
 message.regEmailError=An account for that email already exists. Please enter a different email.
 message.regUserError=An account for that username already exists. Please enter a different username.
@@ -63,6 +63,8 @@ label.form.logement.Type.houseBarn=HouseBarn
 label.form.choose.img=Choose image
 label.form.DatedDispo=Disponibility Date
 label.form.update=Update
+label.form.user.type.Admin=Seller
+label.form.user.type.User=Buyer
 label.form.Add=Add
 label.form.Edit=Edit
 label.form.Delete=Delete
@@ -78,3 +80,5 @@ label.form.Night=Night
 label.form.Status=Status
 label.form.Waiting=Waiting
 label.form.Valid=Valid
+label.form.ConvertToDollar= Convert
+label.form.SearchResult=Search result
