--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -3,7 +3,7 @@ message.password=Mot de passe requis
 message.badCredentials=Informations d'identification non valides
 message.regPasswordError=Les mots de passe ne correspondent pas
 message.logoutSucc=Vous vous êtes déconnecté correctement
-message.regSucc=Vous vous êtes inscrit correctement. Nous vous enverrons un message de confirmation à votre compte e-mail.
+message.regSucc=Vous vous êtes inscrit correctement. Vous pouvez maintenant accerder à votre compte.
 message.Error=Erreur
 message.regEmailError=Un compte pour cet e-mail existe déjà. Entrez un autre e-mail.
 message.regUserError=Un compte pour ce nom d'utilisateur existe déjà. Entrez un autre nom d'utilisateur.
@@ -63,6 +63,8 @@ label.form.logement.Type.houseBarn=Grange
 label.form.choose.img=Choisir une image
 label.form.DatedDispo= Date de Disponibilité
 label.form.update=Modifier
+label.form.user.type.Admin=Bailleur
+label.form.user.type.User=Locataire
 label.form.Add=Ajouter
 label.form.Edit=Modifier
 label.form.Delete=Supprimer
@@ -78,3 +80,5 @@ label.form.Night=Nuit
 label.form.Status=Status
 label.form.Waiting=En attente
 label.form.Valid=Valide
+label.form.ConvertToDollar=Convertit
+label.form.SearchResult=Résultat de la recherche
